Fixed a fullscreen race condition on OSX

Ensure that |windowDidExitFullscreen| gets called after the fullscreen
transition is completed. Slightly speed up the animations on Yosemite.

BUG=593419

Review URL: https://codereview.chromium.org/1813693003

Cr-Commit-Position: refs/heads/master@{#383381}

Former-commit-id: 38ac6be27a783853f6a8fec136d2f4d3235a34d6